contrib/demos-unmaintained/demo/prototype3-script/apibinding/kuard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  selector:
    app: kuard
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
