contrib/demos-unmaintained/demo/prototype3-script/apibinding/kuard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  labels:
    workloads.kcp.dev/cluster: kind-us-east1
spec:
  tls:
  - hosts:
    - kuard.kcp-apps.127.0.0.1.nip.io
  rules:
  - host: kuard.kcp-apps.127.0.0.1.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 8443
